Authentication works. Still lots of todos in the code

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,6 +27,7 @@
 	</li>
 	<li>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
+          <img src="https://raw.githubusercontent.com/lit/lit.dev/main/packages/lit-dev-content/site/images/icon.svg" />
 	  <p>
 	    Typescript is the language that makes this website function on your
 	    browser. The framework that goes along with it in this case
