--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
 	    Rust is used in the backend with the
 	    libraries <a href="http://rocket.rs">rocket</a>, <a href="http://diesel.rs">diesel</a>
 	    and <a href="https://djc.github.io/askama/">askama</a> as web
-	    frameworks, orm and templating engine respectively.
+	    frameworks, ORM and templating engine respectively.
 	  </p>
 	</li>
 	<li>
@@ -30,7 +30,7 @@
           <img src="https://raw.githubusercontent.com/lit/lit.dev/main/packages/lit-dev-content/site/images/icon.svg" />
 	  <p>
 	    Typescript is the language that makes this website function on your
-	    browser. The framework that goes along with it in this case
+	    browser. The framework that goes along with it, in this case,
 	    is <a href="http://lit.dev">lit</a>.
 	  </p>
         </li>
