--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <hp-navbar></hp-navbar>
     <div id="page-heading">
       <h1>Moritz Sokoll</h1>
-      <h2>Developer and Software Enthusiast</h2>
+      <h2>Mathematician, Developer and Software Enthusiast</h2>
     </div>
 
     <div id="description">
