Fixed #9 implemented #10 and #11

--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/static/styles/ap.css">
     <script src="/dist/ap-bundle.js"></script>
     <script src="/dist/navbar-bundle.js"></script>
+    {% include "loggedin.html" %}
   </head>
   <body>
     <hp-navbar></hp-navbar>
