--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
     <title>Moritz Sokoll - About</title>
     <link rel="stylesheet" href="/static/styles/about.css">
     <script type="module" src="/dist/navbar-bundle.js"></script>
+    {% include "loggedin.html" %}
   </head>
   <body>
     <hp-navbar></hp-navbar>
