--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Moritz Sokoll</title>
     <link rel="stylesheet" href="/static/styles/index.css">
     <script type="module" src="/dist/navbar-bundle.js"></script>
+    {% include "loggedin.html" %}
   </head>
   <body>
     <hp-navbar></hp-navbar>
