Implemented a cookie banner

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -15,4 +15,7 @@ $title_size: 75px;
 body {
     font-family: 'NTR', sans-serif;
 }
-
+hp-cookiebanner {
+    color: $secfg;
+    background-color: $primfg;
+}
