--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
     <title>Moritz Sokoll - About</title>
     <link rel="stylesheet" href="/static/styles/about.css">
     <script type="module" src="/dist/navbar-bundle.js"></script>
+    <script type="module" src="/dist/cookiebanner-bundle.js"></script>
     {% include "loggedin.html" %}
   </head>
   <body>
@@ -44,5 +45,6 @@
         </li>
       </ul>
     </div>
+    <hp-cookiebanner></hp-cookiebanner>
   </body>
 </html>
