--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Moritz Sokoll</title>
     <link rel="stylesheet" href="/static/styles/index.css">
     <script type="module" src="/dist/navbar-bundle.js"></script>
+    <script type="module" src="/dist/cookiebanner-bundle.js"></script>
     {% include "loggedin.html" %}
   </head>
   <body>
@@ -18,5 +19,6 @@
 	{{ description|safe }}
       </p>
     </div>
+    <hp-cookiebanner></hp-cookiebanner>
   </body>
 </html>
